# Tarea-2---Programacion-III

./: CMakeLists.txt  README.md  clasesPrueba.cpp  clasesPrueba.h  core_numeric.hpp  main.cpp  testMax.cpp  testMaxVar.cpp  testMean.cpp  testMeanVar.cpp  testParte2.cpp  testSum.cpp  testSumVar.cpp  testTransformReduce.cpp  testVariance.cpp  testVarianceVar.cpp
